Project

General

Profile

Actions

Bug #41433

closed

rgw: fix list starts with null marker

Added by Tianshan Qu over 4 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous mimic nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

list with version_id=null, the null will be treated as a "null" version in cls rgw_bucket_list, which cause the list return wrong keys.

for example. have keys
testobj[null]
testobj[xxxyyy]

list with version_id=null, the key encode as "\0x80 testobj \0i null" in encode_list_index_key, find it not exsits, then got start_key=testobj\0x1, will skip all the keys, but should return testobj[xxxyyy] actually.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #41977: luminous: rgw: fix list starts with null markerRejectedActions
Copied to rgw - Backport #41978: nautilus: rgw: fix list starts with null markerResolvedNathan CutlerActions
Copied to rgw - Backport #41979: mimic: rgw: fix list starts with null markerResolvedNathan CutlerActions
Actions #2

Updated by Casey Bodley over 4 years ago

  • Status changed from New to Fix Under Review
  • Backport set to luminous mimic nautilus
Actions #3

Updated by Casey Bodley over 4 years ago

  • Status changed from Fix Under Review to 7
Actions #4

Updated by Casey Bodley over 4 years ago

  • Status changed from 7 to Pending Backport
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41977: luminous: rgw: fix list starts with null marker added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41978: nautilus: rgw: fix list starts with null marker added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41979: mimic: rgw: fix list starts with null marker added
Actions #8

Updated by Nathan Cutler over 4 years ago

  • Pull request ID set to 29897
Actions #9

Updated by Nathan Cutler over 4 years ago

@Casey can you confirm that this really needs to be backported all the way to luminous?

Actions #10

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF