rgw: fix list versions starts with version_id=null

list with version_id=null, the null will be treated as a "null" version
in cls rgw_bucket_list, which cause the list return wrong keys

Fixes: https://tracker.ceph.com/issues/41433

Signed-off-by: Tianshan Qu <tianshan@xsky.com>
(cherry picked from commit 120df4bb38f60a9a934ce6c8f8b029ef323221b1)